# JobAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  config.yaml.example  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.json  setup.sh
.cursor/: mcp.json
.github/workflows/: ci.yml
backend/: config.py  errors.py  main.py  requirements.txt  security.py  tasks.py  version.py
backend/agents/: __init__.py  application_materials_agent.py  contact_enrichment_agent.py  filter_agent.py  latex_resume_agent.py  resume_agent.py  scraper_agent.py
backend/db/: client.py  migrate.py  (+2 more)
companies/: 2u.yaml  abacus-.yaml  abridge.yaml  acceleron.yaml  accept.yaml  acquirecom-fka-microacquire.yaml  activ-financial-systems.yaml  acv-auctions.yaml  ada.yaml  adaptive-insights.yaml  adobe.yaml  adzuna-jobs.yaml  affirmed-networks.yaml  ai.yaml  aimon.yaml  airbnb.yaml  airbyte.yaml  aivar.yaml  aiwyn.yaml  alcresta-therapeutics.yaml  algox2.yaml  allena-pharmaceuticals.yaml  alloy.yaml  allscripts.yaml  altair-semiconductor.yaml  amazon.yaml  american-dynamism.yaml  amplitude.yaml  anaqua.yaml  ansible-health.yaml  anthropic.yaml  anunta.yaml  anybotics.yaml  anyscale.yaml  anything.yaml  apple.yaml  appwrite.yaml  apron.yaml  archy.yaml  arcion-labs.yaml  (+154 more)
data/: candidate_profile.json
docs/: PROJECT_REFERENCE.md
frontend/: .env.example  index.html  next.config.mjs  package-lock.json  package.json
scripts/: clean-frontend-next.sh  dev-api.sh
supabase/: config.toml
tests/: conftest.py  test_api.py  test_security.py
(+76 files in other folders)
